# BansheeEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
Source/Banshee3D/: BansheeEditorExec.rc  BsEditorExec.cpp  CMakeLists.txt  CMakeSources.cmake  RCa12528  RCa21224
Source/EditorCore/: BsEditorApplication.cpp  BsEditorApplication.h  BsEditorPrerequisites.h  CMakeLists.txt  CMakeSources.cmake
Source/EditorCore/CodeEditor/: BsCodeEditor.cpp  BsCodeEditor.h  BsMDCodeEditor.cpp
Source/EditorCore/EditorWindow/: BsDockManager.cpp  BsDockManager.h  BsDockManagerLayout.cpp  BsDockManagerLayout.h  BsEditorWidget.cpp  BsEditorWidget.h  BsEditorWidgetLayout.cpp  BsEditorWidgetLayout.h  BsEditorWidgetManager.cpp  BsEditorWidgetManager.h  BsEditorWindow.h  BsEditorWindowBase.cpp  BsEditorWindowBase.h  BsMainEditorWindow.cpp  BsModalWindow.cpp  BsModalWindow.h
Source/EditorCore/GUI/: BsGUIColor.cpp  BsGUIColor.h  BsGUIColorDistributionField.cpp  BsGUIColorDistributionField.h  BsGUIColorField.cpp  BsGUIColorField.h  BsGUIColorGradient.cpp  BsGUIColorGradient.h  BsGUIColorGradientField.cpp  BsGUIColorGradientField.h  BsGUICurves.cpp  BsGUICurves.h  BsGUICurvesField.cpp  BsGUICurvesField.h  BsGUIDockSlider.cpp  BsGUIDropButton.cpp  BsGUIDropButton.h  BsGUIFieldBase.h  BsGUIFieldOptions.cpp  BsGUIFieldOptions.h  BsGUIFloatDistributionField.cpp  BsGUIFloatDistributionField.h  BsGUIFloatField.cpp  BsGUIFloatField.h  BsGUIGraphTicks.h  BsGUIIntField.cpp  BsGUIIntField.h  BsGUIListBoxField.h  BsGUIMenuBar.cpp  BsGUIMenuBar.h  BsGUIResourceTreeView.cpp  BsGUIResourceTreeView.h  BsGUISceneTreeView.cpp  BsGUISceneTreeView.h  BsGUISliderField.cpp  BsGUISliderField.h  BsGUIStatusBar.cpp  BsGUIStatusBar.h  BsGUITabButton.cpp  BsGUITabButton.h  (+18 more)
Source/EditorCore/Handles/: BsHandleDrawManager.cpp  BsHandleDrawManager.h  BsHandleManager.cpp  BsHandleManager.h  BsHandleSliderManager.cpp  BsHandleSliderManager.h
Source/EditorCore/RTTI/: BsPlatformInfoRTTI.h
Source/EditorCore/Scene/: BsGizmoManager.cpp  BsGizmoManager.h  BsSceneGrid.cpp  BsSceneGrid.h  BsScenePicking.cpp  BsScenePicking.h  BsSelection.cpp  BsSelection.h  BsSelectionRenderer.cpp  BsSelectionRenderer.h  BsSerializedSceneObject.cpp  BsSerializedSceneObject.h
Source/EditorCore/SceneView/: BsGizmoManager.cpp  BsSceneGrid.cpp  BsScenePicking.cpp  BsSelectionRenderer.cpp
Source/EditorCore/Settings/: BsEditorSettings.cpp  BsEditorSettings.h  BsProjectSettings.cpp  BsSettings.cpp  BsSettings.h
Source/EditorCore/Testing/: BsEditorTestSuite.cpp
Source/EditorCore/UndoRedo/: BsCmdBreakPrefab.cpp  BsCmdBreakPrefab.h  BsCmdCloneSO.cpp  BsCmdCloneSO.h  BsCmdCreateSO.cpp  BsCmdCreateSO.h  BsCmdDeleteSO.cpp  BsCmdDeleteSO.h  BsCmdInputFieldValueChange.h  BsCmdInstantiateSO.cpp  BsCmdInstantiateSO.h  BsCmdRecordSO.cpp  BsCmdRecordSO.h  BsCmdRenameSO.cpp  BsCmdRenameSO.h  BsCmdReparentSO.cpp  BsCmdReparentSO.h  BsEditorCommand.cpp  BsEditorCommand.h  BsUndoRedo.cpp  BsUndoRedo.h
Source/EditorCore/Utility/: BsBuiltinEditorResources.h  BsSplashScreen.cpp  BsSplashScreen.h
Source/EditorCore/Win32/: BsVSCodeEditor.cpp
Source/EditorManaged/: CMakeLists.txt  MBansheeEditor.csproj.in
Source/EditorManaged/GUI/: EditorStyles.cs  GUIColorDistributionField.cs  GUIColorField.cs  GUIColorGradient.cs  GUIColorGradientField.cs  GUICurvesField.cs  GUIDictionaryField.cs  GUIEnumField.cs  GUIFloatDistributionField.cs  GUIFloatField.cs  GUIGameObjectField.cs  GUIIntField.cs  GUILayoutWithBackground.cs  GUIListBoxField.cs  GUIListField.cs  GUIReimportButton.cs  GUIResourceField.cs  GUISceneTreeView.cs  GUISliderField.cs  GUITextField.cs  GUITextureField.cs  GUIToggleField.cs  GUIVector2DistributionField.cs  GUIVector2Field.cs  GUIVector3DistributionField.cs  GUIVector3Field.cs  GUIVector4Field.cs  LocEdString.cs
Source/EditorManaged/General/: EditorApplication.cs  EditorPersistentData.cs  EditorSceneData.cs  IGlobalShortcuts.cs  PlayInEditor.cs  Program.cs  Selection.cs
Source/EditorManaged/Input/: EditorInput.cs  EditorVirtualInput.cs
Source/EditorManaged/Inspectors/: AnimationClipInspector.cs  AnimationInspector.cs  AudioClipInspector.cs  AudioListenerInspector.cs  AudioSourceInspector.cs  BoneInspector.cs  BoxColliderInspector.cs  CameraInspector.cs  CapsuleColliderInspector.cs  CharacterControllerInspector.cs  ColliderInspector.cs  D6JointInspector.cs  DistanceJointInspector.cs  FixedJointInspector.cs  FontInspector.cs  GUISkinInspector.cs  GUIWidgetInspector.cs  HingeJointInspector.cs  JointInspector.cs  LightInspector.cs  LightProbeVolumeInspector.cs  LimitInspectors.cs  MaterialInspector.cs  MeshColliderInspector.cs  MeshInspector.cs  PhysicsMaterialInspector.cs  PhysicsMeshInspector.cs  PlainTextInspector.cs  PlaneColliderInspector.cs  PrefabInspector.cs  ReflectionProbeInspector.cs  RenderSettingsInspector.cs  RenderableInspector.cs  RigidbodyInspector.cs  ScriptCodeInspector.cs  ShaderInspector.cs  SliderJointInspector.cs  SphereColliderInspector.cs  SphericalJointInspector.cs  SpriteTextureInspector.cs  (+2 more)
Source/EditorManaged/Properties/: AssemblyInfo.cs.in
Source/EditorManaged/Script/: CodeEditor.cs  ScriptCodeManager.cs  ScriptCompiler.cs
Source/EditorManaged/Tests/: UnitTestTypes.cs  UnitTests.cs
Source/EditorManaged/Utility/: DragDrop.cs  EdAnimationCurve.cs  EditorBuiltin.cs  (+11 more)
Source/EditorScript/: BsEditorResourceLoader.cpp  BsEditorResourceLoader.h  BsEditorScriptLibrary.cpp  BsEditorScriptLibrary.h  BsEditorScriptManager.cpp  BsEditorScriptManager.h  BsGUIGameObjectField.cpp  BsGUIGameObjectField.h  BsGUIResourceField.cpp  BsGUIResourceField.h  BsGUITextureField.cpp  BsGUITextureField.h  BsManagedEditorCommand.cpp  BsManagedEditorCommand.h  BsMenuItemManager.cpp  BsMenuItemManager.h  BsScriptDragDropManager.h  BsScriptEditorPlugin.cpp  BsScriptEditorPrerequisites.h  BsScriptGizmoManager.cpp  BsScriptGizmoManager.h  BsScriptHandleManager.cpp  BsScriptHandleManager.h  BsToolbarItemManager.cpp  BsToolbarItemManager.h  CMakeLists.txt  CMakeSources.cmake
Source/Game/: CMakeLists.txt  Game.rc  Main.cpp
(+2014 files in other folders)
